testsuite/tests/dependent/should_fail/T14066g.hs
{-# LANGUAGE TypeInType #-}

module T14066g where

import Data.Kind

data SameKind :: k -> k -> Type

data Q a (b :: a) (d :: SameKind c b)
